# vocabmorizer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPECIFICATION.md  babel.cfg  pyproject.toml
.claude/: settings.json
app/: __init__.py  config.py  extensions.py
app/admin/: __init__.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/io/: __init__.py  exporters.py  importers.py  routes.py
app/models/: user.py  vocabulary.py
app/practice/: __init__.py  routes.py  sm2.py
app/static/js/: import.js  practice.js  tts.js
app/templates/: base.html  home.html  landing.html
app/templates/admin/: panel.html
app/templates/auth/: login.html  register.html
app/templates/io/: import.html  preview.html
app/templates/practice/: card.html  done.html  setup.html
app/templates/vocab/: _form.html  add.html  community.html  edit.html  list.html
app/utils/: decorators.py  helpers.py
app/vocab/: __init__.py  forms.py  routes.py
data/: vocabmorizer.db
locales/en/LC_MESSAGES/: messages.po
locales/es/LC_MESSAGES/: messages.po
locales/hr/LC_MESSAGES/: messages.po
locales/pl/LC_MESSAGES/: messages.po
locales/uk/LC_MESSAGES/: messages.po
migrations/versions/: 0aba89128371_initial_user_table.py  5417cafafdf8_add_is_public_to_vocabulary_entries.py  76484f6bf339_add_vocabulary_entries_and_review_stats_.py
tests/: conftest.py  test_admin.py  test_auth.py  test_io.py  test_practice.py  test_sm2.py  test_vocab.py
